[package]
name = "uefi_game"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
log = "0.4"
uefi = { version = "0.35.0", features = ["alloc", "global_allocator"] }

[profile.dev]
panic = "abort" # Na bare-metal panic musi kończyć program natychmiastowo

[profile.release]
panic = "abort"
